--- a/style.css
+++ b/style.css
@@ -10,8 +10,17 @@ html, body {
 #game {
     height: 100%;
     position: relative;
+    background-image: url("./resources/backgroundBamboo.png");
 }
 
-.redPandaLeft {
-    transform: rotateY(180deg)
+.redPanda {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 300px
+}
+
+.apple {
+    position: absolute;
+    height: 50px
 }
