--- a/style.css
+++ b/style.css
@@ -26,14 +26,19 @@ body {
   position: absolute;
   height: 50px;
   z-index: 1;
-  animation: fallingApple 3s linear;
+  animation: fallingApple 3s linear forwards;
 }
 
 @keyframes fallingApple {
   0% {
-    transform: translateY(0%);
+    transform: translateY(0);
+  }
+  99% {
+    transform: translateY(94vh);
+    opacity: 1
   }
   100% {
-    transform: translateY(95vh);
+    transform: translateY(94vh);
+    opacity: 0
   }
 }
