--- a/game.css
+++ b/game.css
@@ -15,7 +15,7 @@ body {
   overflow: hidden;
 }
 
-#redPanda {
+#player {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -23,7 +23,7 @@ body {
   z-index: 2;
 }
 
-.apple {
+.item {
   position: absolute;
   height: 50px;
   z-index: 1;
@@ -35,30 +35,23 @@ body {
   0% {
     transform: translateY(0);
   }
-  99% {
-    transform: translateY(100vh);
-    /* transform: translateY(94vh); */
-    opacity: 1
-  }
   100% {
     transform: translateY(100vh);
-    /* transform: translateY(94vh); */
-    opacity: 0
   }
 }
 
 
-/* APPLE COUNTER */ 
-.appleCounter {
+/* Score */ 
+.scoreDiv {
     position: absolute;
     right: 20px;
     top: 20px
 }
 
-.appleCounter span {
+.scoreDiv span {
     font-size: 50px
 }
 
-.appleCounter img {
+.scoreDiv img {
     height: 50px
 }
