--- a/home.css
+++ b/home.css
@@ -1,12 +1,12 @@
 body {
   height: 100%;
   background: linear-gradient(
-      29deg,
-      rgb(227 108 108 / 80%),
-      rgba(255, 0, 0, 0) 70.71%
-    ),
-    linear-gradient(290deg, rgb(109 219 109 / 80%), rgba(0, 255, 0, 0) 70.71%),
-    linear-gradient(208deg, rgb(105 105 229 / 80%), rgba(0, 0, 255, 0) 70.71%);
+    208deg,
+    rgb(105 105 229 / 80%),
+    rgba(0, 0, 255, 0) 70.71%
+  ),
+  linear-gradient(99deg, rgb(109 219 109 / 80%), rgba(0, 255, 0, 0) 70.71%),
+  linear-gradient(308deg, rgb(227 108 108 / 80%), rgba(255, 0, 0, 0) 70.71%)
 }
 
 .title {
@@ -30,9 +30,8 @@ h1 {
 }
 
 .play:hover {
-    text-shadow: -6px 10px 2px #060008
+  text-shadow: -6px 10px 2px #060008;
 }
-
 
 #themeSelector {
   display: flex;
@@ -41,40 +40,40 @@ h1 {
 }
 
 #themeIcons {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 50%;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 65%;
+  align-items: center;
 }
 
 .themes {
   width: max-content;
   border-radius: 7px;
   border: black 1px dashed;
-  padding: 7px 20px 20px
+  padding: 7px 20px 20px;
 }
 
-
 .themes legend {
-    text-align: left;
+  text-align: left;
   font-family: cursive;
   font-size: 20px;
   text-shadow: -2px 2px 2px #060008;
 }
 
-
 .icon {
-    font-size: 70px;
-    cursor: pointer;
-    margin: 15px
-  }
-  .icon:hover {
-      text-shadow: -2px 3px 2px #060008;
-  }
-  
+  font-size: 70px;
+  cursor: pointer;
+  margin: 15px;
+}
+.icon:hover {
+  text-shadow: -2px 3px 2px #060008;
+}
 
 #preview {
   display: flex;
 }
 
+#preview img {
+  height: 400px;
+}
