--- a/gameOver.css
+++ b/gameOver.css
@@ -15,9 +15,25 @@
   linear-gradient(308deg, rgb(227 108 108 / 80%), rgba(255, 0, 0, 0) 70.71%)
   }
   
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: cursive;
+}
+
   div span {
     font-size: 200px;
     display: flex;
     justify-content: center;
     height: 100%;
+  }
+
+  a {
+    text-decoration: none;
+    text-align: center;
+    margin: 50px;
+    font-size: 60px;
+    color: black;
+    cursor: pointer;
   }
